fix reply arrow appearing as the wrong color

--- a/app/assets/stylesheets/common/base/notification-options.scss
+++ b/app/assets/stylesheets/common/base/notification-options.scss
@@ -5,6 +5,6 @@
   color: #3980a3;
   font-weight: normal;
 }
-button > .fa {
+#topic-footer-buttons button > .fa {
   color: white !important;
 }
